Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8119

conf-sanity test_47: timeout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for liuying <emoly.liu@intel.com>

      This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/ff7c62c8-13ad-11e6-9e5d-5254006e85c2.

      The sub-test test_47 failed with the following error:

      test failed to respond and timed out
      

      Please provide additional information about the failure here.

      MDS console showed:

      06:28:40:Call Trace:
      06:28:40: [<ffffffffa0c92a8c>] osd_trans_commit_cb+0x17c/0x3c0 [osd_zfs]
      06:28:40: [<ffffffffa021686d>] dmu_tx_do_callbacks+0x3d/0x60 [zfs]
      06:28:40: [<ffffffffa0258b58>] txg_do_callbacks+0x18/0x40 [zfs]
      06:28:40: [<ffffffffa019d727>] taskq_thread+0x1e7/0x3f0 [spl]
      06:28:40: [<ffffffff81067670>] ? default_wake_function+0x0/0x20
      06:28:40: [<ffffffffa019d540>] ? taskq_thread+0x0/0x3f0 [spl]
      06:28:40: [<ffffffff810a138e>] kthread+0x9e/0xc0
      06:28:40: [<ffffffff8100c28a>] child_rip+0xa/0x20
      06:28:40: [<ffffffff810a12f0>] ? kthread+0x0/0xc0
      06:28:40: [<ffffffff8100c280>] ? child_rip+0x0/0x20
      06:28:40:Code: 48 8b 0f 48 8b 41 48 48 8d 51 48 48 39 d0 48 8d 58 d8 74 2e 0f 1f 80 00 00 00 00 48 8b 43 10 48 85 c0 74 0d 48 8b 73 18 4c 89 e7 <ff> d0 49 8b 0c 24 48 8b 43 28 48 8d 51 48 48 39 d0 48 8d 58 d8 
      06:28:40:RIP  [<ffffffffa136d550>] dt_txn_hook_commit+0x40/0x60 [obdclass]
      06:28:40: RSP <ffff88005a2f3d80>
      

      Info required for matching: conf-sanity 47

            tappro Mikhail Pershin
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: